--- a/task7/style.css
+++ b/task7/style.css
@@ -6,12 +6,12 @@
 body {
   min-width: 1280px;
   width: 100%;
-  /*overflow-x: hidden;*/
 }
 
 nav {
   height: 56px;
 }
+
 a {
   text-decoration: none;
 }
@@ -19,6 +19,7 @@ a {
 nav img {
   display: inline-block;
   margin-left: 50px;
+  margin-top: 10px;
 }
 
 nav span {
@@ -36,6 +37,7 @@ nav ul li {
 .direction {
   padding-bottom: 23px;
 }
+
 .direction:hover {
   color: red;
   background-image: url(images/hover.png);
@@ -69,7 +71,7 @@ nav ul {
   width: 100%;
   height: 851px;
   overflow-x: hidden;
-  background-image: url(images/experience.png);
+  background-image: url(images/experience.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -174,7 +176,7 @@ nav ul {
 
 #address {
   height: 340px;
-  background-image: url(images/map.png);
+  background-image: url(images/map.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
 }
@@ -323,7 +325,7 @@ nav ul {
   width: 33.3%;
   height: 566px;
   padding-left: 66.6%;
-  background: no-repeat url(images/time.png);
+  background: no-repeat url(images/time.jpg);
   background-size: 66.6%;
 }
 
