--- a/task8/boot.css
+++ b/task8/boot.css
@@ -1,73 +1,65 @@
-@media (min-width: 769px) {
-  .col-md-1 {
-    width: 8.33% !important;
-  }
-
-  .col-md-2 {
-    width: 16.66% !important;
-  }
-
-  .col-md-3 {
-    width: 25% !important;
-  }
-
-  .col-sm-3 {
-    width: 25%;
-  }
-
-  .col-md-4 {
-    width: 33.33% !important;
-  }
-
-  .col-md-6 {
-    width: 50% !important;
-  }
-
-  .col-sm-6 {
-    width: 50%;
-  }
-}
-
-@media (max-width: 768px) {
-  .col-sm-2 {
-    width: 16.66%;
-  }
-
-  .col-sm-3 {
-    width: 25%;
-  }
-
-  .col-sm-6 {
-    width: 50%;
-  }
-  
-  .col-sm-8 {
-    width: 66.66%;
-  }
-
-  .col-sm-12 {
-    width: 100%;
-  }
-}
-
 * {
   padding: 0;
   margin: 0;
 }
 
 .container {
-  font-size: 0;
-  margin: 10px;
+  padding: 10px;
 }
 
-.row > div > div {
+.row {
+  clear: both;
+}
+
+[class|='col'] {
+  float: left;
+  box-sizing: border-box;
   height: 50px;
   margin: 10px;
   border: 1px solid #999;
   background-color: #eee;
 }
 
-.row > div {
-  display: inline-block;
-  height: 72px;
+@media (max-width: 768px) {
+  .col-sm-2 {
+    width: calc(16.66% - 20px);
+  }
+
+  .col-sm-3 {
+    width: calc(25% - 20px);
+  }
+
+  .col-sm-6 {
+    width: calc(50% - 20px);
+  }
+  
+  .col-sm-8 {
+    width: calc(66.66% - 20px);
+  }
+
+  .col-sm-12 {
+    width: calc(100% - 20px);
+  }
+}
+
+@media (min-width: 769px) {
+  .col-md-1 {
+    width: calc(8.33% - 20px);
+  }
+
+  .col-md-2 {
+    width: calc(16.66% - 20px);
+  }
+
+  .col-md-3 {
+    width: calc(25% - 20px);
+  }
+
+  .col-md-4 {
+    width: calc(33.33% - 20px);
+  }
+
+  .col-md-6 {
+    width: calc(50% - 20px);
+  }
 }
