--- a/task51/Album.scss
+++ b/task51/Album.scss
@@ -1,14 +1,14 @@
-#album {
+.album {
   &.puzzle {
     position: relative;
-    width: 640px;
-    height: 480px;
-    margin: 30px auto;
+    height:  640px;
     img {
       position: absolute;
       object-fit: cover;
     }
     .one-1 {
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
     }
@@ -17,14 +17,14 @@
       left: 0;
       width: 100%;
       height: 100%;
-      clip-path: polygon(0% 0%, 66.6% 0%, 33.3% 100%, 0% 100%);
+      -webkit-clip-path: polygon(0% 0%, 66.6% 0%, 33.3% 100%, 0% 100%);
     }
     .two-2 {
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      clip-path: polygon(66.6% 0%, 100% 0%, 100% 100%, 33.3% 100%);
+      -webkit-clip-path: polygon(66.6% 0%, 100% 0%, 100% 100%, 33.3% 100%);
     }
     .three-1 {
       top: 0;
@@ -145,5 +145,28 @@
         float: left;
         height: 100%;
     }
+  }
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.85);
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  &.show {
+    display: block;
   }
 }
