--- a/task28/style.css
+++ b/task28/style.css
@@ -61,8 +61,8 @@ body {
 }
 
 #main {
-  width: 1200px;
-  height: 200px;
+  width: 1210px;
+  height: 210px;
   margin: 30px auto 0;
   background-color: white;
 }
@@ -74,6 +74,7 @@ body {
   justify-content: space-around;
   width: 400px;
   height: 200px;
+  padding: 5px;
 }
 
 #controlPanel p {
@@ -90,8 +91,10 @@ body {
 .craft4 {
   width: 34px;
   height: 50px;
+  line-height: 50px;
   background-color: Gold;
   text-align: center;
+  border-radius: 10px;
 }
 
 .craft4 {
